--- a/DopodCinema/Module/Home/HomeScreen.xib
+++ b/DopodCinema/Module/Home/HomeScreen.xib
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -9,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeScreen" customModule="DopodCinema" customModuleProvider="target">
             <connections>
+                <outlet property="containerView" destination="gp4-bE-vDD" id="V4N-mz-5BV"/>
                 <outlet property="discoveryDotImageView" destination="qPR-MC-WyH" id="k7Y-Lt-CRw"/>
                 <outlet property="discoveryImageView" destination="Ypv-OF-C0w" id="oBX-St-KsV"/>
                 <outlet property="discoveryNavView" destination="nzA-hc-I3f" id="5bQ-P9-Lcd"/>
@@ -18,6 +21,7 @@
                 <outlet property="movieDotImageView" destination="CnI-o8-Y3r" id="o3H-e9-FpY"/>
                 <outlet property="movieImageView" destination="Xiz-pc-D0s" id="LoP-LY-ttv"/>
                 <outlet property="movieNavView" destination="6MC-g5-c3u" id="EGx-JF-ErY"/>
+                <outlet property="tabbarView" destination="CFp-WN-zXO" id="qKG-5H-Dxc"/>
                 <outlet property="tvDotImageView" destination="Sk8-j9-cBv" id="wSf-nS-3QP"/>
                 <outlet property="tvImageView" destination="mp3-o3-xqj" id="ZrI-vN-NQN"/>
                 <outlet property="tvNavView" destination="hpW-s9-Hmz" id="MRV-ZJ-3Ic"/>
@@ -29,6 +33,10 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gp4-bE-vDD">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CFp-WN-zXO">
                     <rect key="frame" x="0.0" y="772" width="393" height="80"/>
                     <subviews>
@@ -159,7 +167,12 @@
             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CFp-WN-zXO" secondAttribute="trailing" id="8aI-t8-TSC"/>
+                <constraint firstItem="CFp-WN-zXO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="bottom" constant="-80" id="ET2-Md-sVd"/>
                 <constraint firstItem="CFp-WN-zXO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="FZe-SZ-5zw"/>
+                <constraint firstAttribute="bottom" secondItem="gp4-bE-vDD" secondAttribute="bottom" id="NOD-aW-eIw"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gp4-bE-vDD" secondAttribute="trailing" id="cqg-G1-GME"/>
+                <constraint firstItem="gp4-bE-vDD" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="gG2-qU-Dd5"/>
+                <constraint firstItem="gp4-bE-vDD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jny-XM-T2X"/>
                 <constraint firstItem="CFp-WN-zXO" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" id="vna-TU-9se"/>
             </constraints>
             <point key="canvasLocation" x="132" y="-11"/>
