--- a/DopodCinema/Module/Movie/MovieViewController.xib
+++ b/DopodCinema/Module/Movie/MovieViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -12,18 +12,75 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieViewController" customModule="DopodCinema" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="lsJ-WP-01X" id="QJl-s1-fcj"/>
-                <outlet property="topConstrait" destination="vYk-KR-rOq" id="l52-7F-EMq"/>
+                <outlet property="searchLabel" destination="b60-5t-yBa" id="2gQ-K6-89A"/>
+                <outlet property="searchView" destination="OU5-yR-yqW" id="K8W-Np-dSf"/>
+                <outlet property="tableView" destination="fEK-6u-oMK" id="3qf-zB-ebG"/>
+                <outlet property="topConstrait" destination="Xkz-Wh-fZP" id="Mdi-cG-1om"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lsJ-WP-01X">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jij-2S-fHi">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OU5-yR-yqW">
+                                    <rect key="frame" x="16" y="8" width="382" height="48"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="eV7-kS-55M">
+                                            <rect key="frame" x="22" y="13.666666666666668" width="21" height="21.000000000000004"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="21" id="H8E-cv-InX"/>
+                                                <constraint firstAttribute="height" constant="21" id="Q5a-xL-WCz"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Movie, Show or Actor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b60-5t-yBa">
+                                            <rect key="frame" x="65" y="15.666666666666668" width="295" height="17.000000000000004"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="eV7-kS-55M" firstAttribute="centerY" secondItem="OU5-yR-yqW" secondAttribute="centerY" id="IFy-ZR-w98"/>
+                                        <constraint firstItem="eV7-kS-55M" firstAttribute="leading" secondItem="OU5-yR-yqW" secondAttribute="leading" constant="22" id="Sv0-3u-ZST"/>
+                                        <constraint firstAttribute="height" constant="48" id="TFA-dD-jAM"/>
+                                        <constraint firstItem="b60-5t-yBa" firstAttribute="leading" secondItem="eV7-kS-55M" secondAttribute="trailing" constant="22" id="gLl-yr-osc"/>
+                                        <constraint firstItem="b60-5t-yBa" firstAttribute="centerY" secondItem="eV7-kS-55M" secondAttribute="centerY" id="wak-bn-BAT"/>
+                                        <constraint firstAttribute="trailing" secondItem="b60-5t-yBa" secondAttribute="trailing" constant="22" id="yvy-Y0-xGc"/>
+                                    </constraints>
+                                </view>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fEK-6u-oMK">
+                                    <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </tableView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="OU5-yR-yqW" firstAttribute="leading" secondItem="Jij-2S-fHi" secondAttribute="leading" constant="16" id="0rb-5j-WAS"/>
+                                <constraint firstItem="OU5-yR-yqW" firstAttribute="top" secondItem="Jij-2S-fHi" secondAttribute="top" constant="8" id="Eci-JH-n8Z"/>
+                                <constraint firstItem="fEK-6u-oMK" firstAttribute="top" secondItem="OU5-yR-yqW" secondAttribute="bottom" constant="8" id="JJJ-ks-CNs"/>
+                                <constraint firstAttribute="trailing" secondItem="OU5-yR-yqW" secondAttribute="trailing" constant="16" id="bnb-yn-PRN"/>
+                                <constraint firstAttribute="bottom" secondItem="fEK-6u-oMK" secondAttribute="bottom" id="iNl-dg-Fgz"/>
+                                <constraint firstAttribute="trailing" secondItem="fEK-6u-oMK" secondAttribute="trailing" id="tmH-7U-kUa"/>
+                                <constraint firstItem="fEK-6u-oMK" firstAttribute="leading" secondItem="Jij-2S-fHi" secondAttribute="leading" id="wPg-xg-jX6"/>
+                            </constraints>
+                        </view>
+                    </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="Jij-2S-fHi" secondAttribute="bottom" id="AfB-nm-hUx"/>
+                        <constraint firstItem="Jij-2S-fHi" firstAttribute="top" secondItem="lsJ-WP-01X" secondAttribute="top" id="Xkz-Wh-fZP"/>
+                        <constraint firstAttribute="trailing" secondItem="Jij-2S-fHi" secondAttribute="trailing" id="ev1-zO-3MY"/>
+                        <constraint firstItem="Jij-2S-fHi" firstAttribute="leading" secondItem="lsJ-WP-01X" secondAttribute="leading" id="uKU-3D-OYt"/>
+                    </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
@@ -32,12 +89,13 @@
                 <constraint firstItem="lsJ-WP-01X" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Bi0-7H-8bC"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="lsJ-WP-01X" secondAttribute="trailing" id="bYo-6O-k4f"/>
                 <constraint firstAttribute="bottom" secondItem="lsJ-WP-01X" secondAttribute="bottom" id="md6-bj-v6q"/>
-                <constraint firstItem="lsJ-WP-01X" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="vYk-KR-rOq"/>
+                <constraint firstItem="lsJ-WP-01X" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="vYk-KR-rOq"/>
             </constraints>
             <point key="canvasLocation" x="132" y="-11"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_search" width="20.333333969116211" height="21"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
