--- a/DopodCinema/Module/Movie/View/PopularCell.xib
+++ b/DopodCinema/Module/Movie/View/PopularCell.xib
@@ -28,36 +28,59 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yv0-eN-sJJ">
-                                <rect key="frame" x="96" y="0.0" width="192" height="80"/>
+                                <rect key="frame" x="96" y="0.0" width="192" height="52"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Action" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VyP-y5-hLI">
-                                        <rect key="frame" x="0.0" y="0.0" width="192" height="26.666666666666668"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="192" height="26"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drifting Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXw-KE-HNJ">
-                                        <rect key="frame" x="0.0" y="26.666666666666664" width="192" height="26.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="26" width="192" height="26"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YAF-Kb-TBO">
-                                        <rect key="frame" x="0.0" y="53.333333333333336" width="192" height="26.666666666666664"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mXz-Hn-eyf">
+                                <rect key="frame" x="96" y="60" width="192" height="20"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_clock" translatesAutoresizingMaskIntoConstraints="NO" id="71R-Gf-TYR">
+                                        <rect key="frame" x="0.0" y="2" width="16" height="16"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="16" id="gZf-5d-d2K"/>
+                                            <constraint firstAttribute="width" constant="16" id="pBx-ca-h2m"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="148 Minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3I5-Tf-4bt">
+                                        <rect key="frame" x="24" y="2.3333333333333277" width="74.333333333333329" height="15.666666666666664"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="9FX-ka-zkd"/>
+                                    <constraint firstItem="71R-Gf-TYR" firstAttribute="leading" secondItem="mXz-Hn-eyf" secondAttribute="leading" id="GTn-Fj-VQQ"/>
+                                    <constraint firstItem="3I5-Tf-4bt" firstAttribute="leading" secondItem="71R-Gf-TYR" secondAttribute="trailing" constant="8" id="Sju-n1-3Ii"/>
+                                    <constraint firstItem="3I5-Tf-4bt" firstAttribute="centerY" secondItem="71R-Gf-TYR" secondAttribute="centerY" id="cN6-5I-rjc"/>
+                                    <constraint firstItem="71R-Gf-TYR" firstAttribute="centerY" secondItem="mXz-Hn-eyf" secondAttribute="centerY" id="z9s-ab-osY"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="TEC-Ny-wCG" firstAttribute="leading" secondItem="87Y-JI-Kfd" secondAttribute="leading" id="0yH-LN-2Ha"/>
                             <constraint firstAttribute="trailing" secondItem="yv0-eN-sJJ" secondAttribute="trailing" id="B95-xy-zpt"/>
+                            <constraint firstItem="mXz-Hn-eyf" firstAttribute="trailing" secondItem="yv0-eN-sJJ" secondAttribute="trailing" id="BIC-1q-YNs"/>
+                            <constraint firstAttribute="bottom" secondItem="mXz-Hn-eyf" secondAttribute="bottom" id="C4V-RJ-yZW"/>
                             <constraint firstItem="TEC-Ny-wCG" firstAttribute="centerY" secondItem="87Y-JI-Kfd" secondAttribute="centerY" id="Tez-9a-jio"/>
+                            <constraint firstItem="mXz-Hn-eyf" firstAttribute="leading" secondItem="yv0-eN-sJJ" secondAttribute="leading" id="gv2-X2-UUX"/>
                             <constraint firstItem="yv0-eN-sJJ" firstAttribute="top" secondItem="87Y-JI-Kfd" secondAttribute="top" id="lR2-cr-AA3"/>
-                            <constraint firstAttribute="bottom" secondItem="yv0-eN-sJJ" secondAttribute="bottom" id="nPn-dD-x9b"/>
+                            <constraint firstItem="mXz-Hn-eyf" firstAttribute="top" secondItem="yv0-eN-sJJ" secondAttribute="bottom" constant="8" id="opj-bK-ixc"/>
                             <constraint firstItem="yv0-eN-sJJ" firstAttribute="leading" secondItem="TEC-Ny-wCG" secondAttribute="trailing" constant="16" id="xJ0-ae-n5c"/>
                         </constraints>
                     </view>
@@ -75,11 +98,13 @@
                 <outlet property="categoryLabel" destination="VyP-y5-hLI" id="SNa-GU-Li1"/>
                 <outlet property="iconImageView" destination="TEC-Ny-wCG" id="Jdj-HD-JOV"/>
                 <outlet property="nameLabel" destination="aXw-KE-HNJ" id="U9N-jt-BuQ"/>
+                <outlet property="timeLabel" destination="3I5-Tf-4bt" id="j6k-Gj-bzc"/>
             </connections>
             <point key="canvasLocation" x="71.755725190839698" y="36.267605633802816"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="ic_clock" width="16" height="16.333333969116211"/>
         <image name="ic_example" width="80" height="80.333335876464844"/>
     </resources>
 </document>
