--- a/DopodCinema/Module/TV/TVViewController.xib
+++ b/DopodCinema/Module/TV/TVViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -11,33 +11,91 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TVViewController" customModule="DopodCinema" customModuleProvider="target">
             <connections>
-                <outlet property="containerView" destination="lsJ-WP-01X" id="QJl-s1-fcj"/>
-                <outlet property="topConstrait" destination="vYk-KR-rOq" id="l52-7F-EMq"/>
+                <outlet property="containerView" destination="AN6-nh-25E" id="jbw-xa-7rT"/>
+                <outlet property="searchLabel" destination="Jh4-nV-11J" id="ivF-8h-lj2"/>
+                <outlet property="searchView" destination="Ti4-LT-ivb" id="5D9-Ip-r0R"/>
+                <outlet property="tableView" destination="Id2-gL-mTi" id="2k4-SP-ajx"/>
+                <outlet property="topConstrait" destination="d6Q-IQ-ZVP" id="MkK-5e-3lP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lsJ-WP-01X">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nhs-2E-tpP">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AN6-nh-25E">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ti4-LT-ivb">
+                                    <rect key="frame" x="16" y="8" width="382" height="48"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="fKk-Vx-Wnh">
+                                            <rect key="frame" x="22" y="13.666666666666668" width="21" height="21.000000000000004"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="MEN-RT-e2y"/>
+                                                <constraint firstAttribute="width" constant="21" id="xf9-I0-KPc"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Movie, Show or Actor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jh4-nV-11J">
+                                            <rect key="frame" x="65" y="15.666666666666668" width="295" height="17.000000000000004"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="48" id="Z2j-7s-6T8"/>
+                                        <constraint firstItem="fKk-Vx-Wnh" firstAttribute="leading" secondItem="Ti4-LT-ivb" secondAttribute="leading" constant="22" id="mrc-d4-dwV"/>
+                                        <constraint firstItem="fKk-Vx-Wnh" firstAttribute="centerY" secondItem="Ti4-LT-ivb" secondAttribute="centerY" id="oez-3Q-JQZ"/>
+                                        <constraint firstItem="Jh4-nV-11J" firstAttribute="centerY" secondItem="fKk-Vx-Wnh" secondAttribute="centerY" id="tHE-6X-XbO"/>
+                                        <constraint firstAttribute="trailing" secondItem="Jh4-nV-11J" secondAttribute="trailing" constant="22" id="tKI-V1-T3J"/>
+                                        <constraint firstItem="Jh4-nV-11J" firstAttribute="leading" secondItem="fKk-Vx-Wnh" secondAttribute="trailing" constant="22" id="wvJ-2g-9PT"/>
+                                    </constraints>
+                                </view>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Id2-gL-mTi">
+                                    <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </tableView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="Id2-gL-mTi" secondAttribute="bottom" id="0J1-Kf-RuU"/>
+                                <constraint firstItem="Ti4-LT-ivb" firstAttribute="leading" secondItem="AN6-nh-25E" secondAttribute="leading" constant="16" id="3WQ-U8-jXQ"/>
+                                <constraint firstAttribute="trailing" secondItem="Id2-gL-mTi" secondAttribute="trailing" id="9J8-gC-cs6"/>
+                                <constraint firstItem="Id2-gL-mTi" firstAttribute="top" secondItem="Ti4-LT-ivb" secondAttribute="bottom" constant="8" id="hbd-WY-5wa"/>
+                                <constraint firstItem="Ti4-LT-ivb" firstAttribute="top" secondItem="AN6-nh-25E" secondAttribute="top" constant="8" id="r7p-Cq-tNe"/>
+                                <constraint firstItem="Id2-gL-mTi" firstAttribute="leading" secondItem="AN6-nh-25E" secondAttribute="leading" id="rDe-de-Bpp"/>
+                                <constraint firstAttribute="trailing" secondItem="Ti4-LT-ivb" secondAttribute="trailing" constant="16" id="xEr-dh-RcC"/>
+                            </constraints>
+                        </view>
+                    </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="AN6-nh-25E" secondAttribute="bottom" id="FZl-6P-JGo"/>
+                        <constraint firstItem="AN6-nh-25E" firstAttribute="leading" secondItem="Nhs-2E-tpP" secondAttribute="leading" id="Jo8-t3-ese"/>
+                        <constraint firstItem="AN6-nh-25E" firstAttribute="top" secondItem="Nhs-2E-tpP" secondAttribute="top" id="d6Q-IQ-ZVP"/>
+                        <constraint firstAttribute="trailing" secondItem="AN6-nh-25E" secondAttribute="trailing" id="vBl-ki-QDK"/>
+                    </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="lsJ-WP-01X" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Bi0-7H-8bC"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="lsJ-WP-01X" secondAttribute="trailing" id="bYo-6O-k4f"/>
-                <constraint firstAttribute="bottom" secondItem="lsJ-WP-01X" secondAttribute="bottom" id="md6-bj-v6q"/>
-                <constraint firstItem="lsJ-WP-01X" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="vYk-KR-rOq"/>
+                <constraint firstItem="Nhs-2E-tpP" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="3G6-l5-NX1"/>
+                <constraint firstItem="Nhs-2E-tpP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="TiC-4s-Clg"/>
+                <constraint firstItem="Nhs-2E-tpP" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="pNe-el-Sne"/>
+                <constraint firstItem="Nhs-2E-tpP" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="wSX-sH-vzQ"/>
             </constraints>
             <point key="canvasLocation" x="132" y="-11"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_search" width="20.333333969116211" height="21"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
