--- a/DopodCinema/Common/View/BaseHeaderSubView.xib
+++ b/DopodCinema/Common/View/BaseHeaderSubView.xib
@@ -32,7 +32,7 @@
                                         <action selector="didBackToViewController" destination="iN0-l3-epB" eventType="touchUpInside" id="31e-BV-zm3"/>
                                     </connections>
                                 </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjg-1R-3m9">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjg-1R-3m9">
                                     <rect key="frame" x="186.33333333333334" y="18" width="41.333333333333343" height="20.333333333333329"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
@@ -55,7 +55,9 @@
                                 <constraint firstItem="gjg-1R-3m9" firstAttribute="centerX" secondItem="HPZ-5R-dNt" secondAttribute="centerX" id="9yO-zB-9ay"/>
                                 <constraint firstItem="a1Z-BN-Con" firstAttribute="centerY" secondItem="HPZ-5R-dNt" secondAttribute="centerY" id="HCB-wL-iVm"/>
                                 <constraint firstAttribute="trailing" secondItem="a1Z-BN-Con" secondAttribute="trailing" constant="19" id="auN-eu-EsA"/>
+                                <constraint firstItem="a1Z-BN-Con" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gjg-1R-3m9" secondAttribute="trailing" constant="16" id="bJP-6K-gwJ"/>
                                 <constraint firstItem="JvT-fs-4F6" firstAttribute="leading" secondItem="HPZ-5R-dNt" secondAttribute="leading" constant="16" id="bPh-mw-m9o"/>
+                                <constraint firstItem="gjg-1R-3m9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JvT-fs-4F6" secondAttribute="trailing" constant="16" id="wjU-hN-Z6T"/>
                             </constraints>
                         </view>
                     </subviews>
